# svk-img-metadata

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: security-reviewer.md
.claude/skills/release/: SKILL.md
.github/workflows/: publish.yml
svk_img_metadata/: __init__.py  errors.py  fields.py  model.py  sync.py  validate.py
svk_img_metadata/codecs/: __init__.py  _common.py  exif.py  iptc.py  xmp.py
svk_img_metadata/containers/: __init__.py  _raw.py  jpeg.py  png.py  tiff.py
tests/: _helpers.py  test_containers.py  test_exif_hardening.py  test_fields.py  test_jpeg_read.py  test_jpeg_write.py  test_malformed.py  test_model.py  test_png.py  test_svk_img_metadata.py  test_sync.py  test_tiff_read.py  test_validate.py  test_xmp_export.py
