[project]
name = "svk-img-metadata"
version = "0.1.0"
description = "Read, write, and synchronise EXIF/IPTC/XMP image metadata in JPEG, PNG, and TIFF"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Henrik Vitalis "}]
license = "Apache-2.0"
classifiers = []
dependencies = [
    "defusedxml>=0.7.1",
    "piexif>=1.1.3",
    "pillow>=12.3.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py310"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/vitlais/svk-img-metadata"
Changelog = "https://github.com/vitlais/svk-img-metadata/releases"
Issues = "https://github.com/vitlais/svk-img-metadata/issues"
CI = "https://github.com/vitlais/svk-img-metadata/actions"

